<resources>
    <string name="app_name">SocietyU</string>
    <string name="GroupsHeader">Groups</string>
    <string name="GroupsSubText">Join group meetings online and chat with other users</string>
    <string name="PrivateHeader">Private Sessions</string>
    <string name="PrivateSubText">Don\'t feel comfortable talking in a group session? Book a private session</string>
    <string name="OnlineSupportHeader">Online Support</string>
    <string name="OnlineSupportSubText">Search our database for a provider with 24 hour online support</string>
    <string name="startButton">Getting started</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start_slider">Got it</string>
    <string name="chooseAcctType">Choose your account type</string>
    <string name="user">User</string>
    <string name="provider">Provider</string>
    <string name="alreadyHasAcct">Already have an account?</string>
    <string name="signIn">Sign In</string>
    <string name="strangersFriends">Where strangers become friends</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgotPassword">Forgot your password?</string>
    <string name="signUpNow">Sign Up Now</string>
    <string name="forgotLogIn">Forgot your login?</string>
    <string name="forgotSubText">Don\'t worry, we\'ll get you back in</string>
    <string name="resetBtn">Reset</string>
    <string name="fullName">Full Name</string>
    <string name="email">Email</string>
    <string name="Username">Username</string>
    <string name="agree">Agree</string>
    <string name="terms">Terms &amp; Conditions</string>
    <string name="IAgree">I agree with terms and conditions</string>
    <string name="license">License</string>
    <string name="yourLocation">Where are you located?</string>
    <string name="zipCode">Zip Code</string>
    <string name="contact">How can we contact you?</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="specialty">Specialty</string>
</resources>
