<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userSignUpPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/white"
        >

        <ImageView
            android:id="@+id/profilePicture_btn"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_marginTop="65dp"
            android:background="@drawable/img"
            android:clickable="true"
            android:scaleType="centerInside"
            android:scaleX="1.5"
            android:scaleY="1.5">

        </ImageView>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:theme="@style/TextLabel">

            <EditText
                android:id="@+id/userSignUp_FullNameEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:hint="@string/fullName"
                android:background="@drawable/rounded_et_corners"
                android:inputType="textPersonName"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:theme="@style/TextLabel">

            <EditText
                android:id="@+id/userSignUp_UsernameEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:hint="@string/Username"
                android:background="@drawable/rounded_et_corners"

                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:theme="@style/TextLabel">

            <EditText
                android:id="@+id/userSignUp_EmailEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:hint="@string/email"
                android:background="@drawable/rounded_et_corners"
                android:inputType="textEmailAddress"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:theme="@style/TextLabel">

            <EditText
                android:id="@+id/userSignUp_PasswordEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:hint="@string/password"
                android:background="@drawable/rounded_et_corners"
                android:inputType="textPassword"
                />
        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="bottom"
            android:orientation="horizontal">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:buttonTint="@color/black"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/IAgree"
                android:textColor="@color/black"
                />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/userSignUp_AgreeBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/rounded_btn_borders"
                android:text="@string/agree"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/userSignUp_TermsBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/roundedsignup_btn_border"
                android:text="@string/terms"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alreadyHasAcct"
                android:layout_marginLeft="50dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/UserSignIn_btn"
                android:background="@null"
                android:text="@string/signIn"
                android:textColor="@color/Highlighted_blue"
                android:textAllCaps="false"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>

    </LinearLayout>



</android.support.design.widget.CoordinatorLayout>