<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".OptionsSignInPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/societyULogo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginBottom="15sp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@mipmap/societyulogos"
            />

        <TextView
            android:id="@+id/chooseAccountType_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chooseAcctType"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/chooseAccountTypeProvider_btn"
            android:text="@string/provider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:clickable="true"
            android:onClick="providerAcctChosen"/>

        <Button
            android:id="@+id/chooseAccountTypeUser_btn_btn"
            android:text="@string/user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:clickable="true"
            android:onClick="userAcctChosen"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alreadyHasAcct"
                android:layout_marginLeft="50dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/optionsSignIn_btn"
                android:background="@null"
                android:text="@string/signIn"
                android:textColor="@color/Highlighted_blue"
                android:textAllCaps="false"
                android:clickable="true"
                android:onClick="toSignInPage"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>