<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    tools:context=".ScreenSlidePagerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/fragmentThreeGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_weight="0"
            android:text="@string/OnlineSupportHeader"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/fragmentThreeGroupSub"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="0"
            android:text="@string/OnlineSupportSubText" />


    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="100dp"
        android:clickable="true"
        android:onClick="onClickGettingStarted"
        android:textAllCaps="false"
        android:text="@string/startButton" />


</FrameLayout>