<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/societyULogo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginBottom="15sp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@mipmap/societyulogos"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strangersFriends"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:theme="@style/TextLabel">

            <EditText
                android:id="@+id/signInUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:hint="@string/username"
                android:background="@drawable/rounded_et_corners"
                />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signInForgotPassword"
            android:layout_gravity="center|right"
            android:text="@string/forgotPassword"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            android:textSize="10sp"
            android:clickable="true"
            android:onClick="forgotPasswordPressed"
            android:textColor="@color/blue"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel">

            <EditText
                android:id="@+id/signInPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:hint="@string/password"
                android:background="@drawable/rounded_et_corners"
                />
        </android.support.design.widget.TextInputLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            android:gravity="center"
            >
            
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/signIn"
                android:textAllCaps="false"
                android:id="@+id/signInPage_SignInBtn"
                android:background="@drawable/rounded_btn_borders"
                android:clickable="true"
                android:onClick="signInPressed"
                />

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:id="@+id/SignInPage_SignUpBtn"
                android:text="@string/signUpNow"
                android:textAllCaps="false"
                android:background="@drawable/roundedsignup_btn_border"
                android:clickable="true"
                android:onClick="signUpNowPressed"
                />
        </LinearLayout>


    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>